--- a/design.css
+++ b/design.css
@@ -1,3 +1,14 @@
+*{
+	font-family: 'Press Start 2P', cursive;
+}
 .flex-container{
 	display: flex;
+	
+}
+.flex-container-center{
+	display:flex;
+	justify-content:center;
+}
+#msg{
+	text-align: center;
 }
