feat: add buttons for computer and center elements

--- a/design.css
+++ b/design.css
@@ -1,6 +1,7 @@
 *{
 	font-family: 'Press Start 2P', cursive;
 }
+
 .flex-container{
 	display: flex;
 	
@@ -14,4 +15,29 @@
 }
 #play-again{
 	visibility: hidden;
+}
+button{
+	margin: 10px;
+	
+}
+
+@media only screen and (max-width: 768px) {
+	/* For mobile phones: */
+	.flex-container-buttons{
+		display:flex;
+		justify-content:center;
+		flex-direction: column;
+	}
+	
+}
+
+@media only screen and (min-width: 768px) {
+	/* For desktop: */
+	
+	.flex-container-buttons{
+		display:flex;
+		justify-content:center;
+	
+	}
+	
 }
