--- a/design.css
+++ b/design.css
@@ -2,15 +2,7 @@
 	font-family: 'Press Start 2P', cursive;
 }
 
-.flex-container{
-	display: flex;
-	
-}
-.flex-container-center{
-	display:flex;
-	justify-content:center;
-	margin-top: 40px;
-}
+
 #msg{
 	text-align: center;
 }
@@ -39,9 +31,19 @@ button{
 	.flex-container-buttons{
 		display:flex;
 		justify-content:center;
-		flex-direction: column;
+		flex-direction:column;
+		width:50%;
 	}
-	
+	.flex-container-center{
+		display: flex;              /* establish flex container */
+		flex-direction: column;     /* stack flex items vertically */
+		justify-content: center;    /* center items vertically, in this case */
+		align-items: center;        /* center items horizontally, in this case */
+		flex-wrap: wrap;
+	}
+	.flex-container{
+		display:flex;
+	}
 }
 
 @media only screen and (min-width: 768px) {
@@ -50,7 +52,15 @@ button{
 	.flex-container-buttons{
 		display:flex;
 		justify-content:center;
+		width:50%;
+	}
+	.flex-container{
+	display: flex;
 	
 	}
-	
+	.flex-container-center{
+		display:flex;
+		justify-content:center;
+		margin-top: 40px;
+	}
 }
