--- a/design.css
+++ b/design.css
@@ -26,6 +26,77 @@ button{
 	
 }
 
+.flex-container-buttons{
+	display:flex;
+	justify-content:center;
+	width:50%;
+}
+.flex-container{
+display: flex;
+}
+.flex-container-center{
+	display:flex;
+	justify-content:center;
+	margin-top: 40px;
+}
+.playerStance{
+	display: flex;
+	justify-content: flex-end;
+	width: 50%;
+	transform:scaleX(-1);
+}
+.computerStance{
+	display: flex;
+	justify-content: flex-end;
+	width: 50%;
+}
+#playerimage{
+
+}
+#computerimage
+@-webkit-keyframes spaceboots {
+	0% {
+	  -webkit-transform: translate(2px, 1px) rotate(0deg);
+	}
+	10% {
+	  -webkit-transform: translate(-1px, -2px) rotate(-1deg);
+	}
+	20% {
+	  -webkit-transform: translate(-3px, 0px) rotate(1deg);
+	}
+	30% {
+	  -webkit-transform: translate(0px, 2px) rotate(0deg);
+	}
+	40% {
+	  -webkit-transform: translate(1px, -1px) rotate(1deg);
+	}
+	50% {
+	  -webkit-transform: translate(-1px, 2px) rotate(-1deg);
+	}
+	60% {
+	  -webkit-transform: translate(-3px, 1px) rotate(0deg);
+	}
+	70% {
+	  -webkit-transform: translate(2px, 1px) rotate(-1deg);
+	}
+	80% {
+	  -webkit-transform: translate(-1px, -1px) rotate(1deg);
+	}
+	90% {
+	  -webkit-transform: translate(2px, 2px) rotate(0deg);
+	}
+	100% {
+	  -webkit-transform: translate(1px, -2px) rotate(-1deg);
+	}
+  }
+.shake {
+	-webkit-animation-name: spaceboots;
+	-webkit-animation-duration: 0.8s;
+	-webkit-transform-origin: 50% 50%;
+	-webkit-animation-iteration-count: 1;
+	-webkit-animation-timing-function: linear;
+  }
+
 @media only screen and (max-width: 768px) {
 	/* For mobile phones: */
 	.flex-container-buttons{
@@ -47,23 +118,10 @@ button{
 	#result{
 		margin:10px;
 	}
-}
-
-@media only screen and (min-width: 768px) {
-	/* For desktop: */
-	
-	.flex-container-buttons{
-		display:flex;
-		justify-content:center;
-		width:50%;
+	.playerCharacter{
+		width:80%;
 	}
-	.flex-container{
-	display: flex;
-	
-	}
-	.flex-container-center{
-		display:flex;
-		justify-content:center;
-		margin-top: 40px;
+	.computerCharacter{
+		width:80%;
 	}
 }
