--- a/design.css
+++ b/design.css
@@ -53,7 +53,9 @@ display: flex;
 #playerimage{
 
 }
-#computerimage
+#computerimage{
+	
+}
 @-webkit-keyframes spaceboots {
 	0% {
 	  -webkit-transform: translate(2px, 1px) rotate(0deg);
