--- a/design.css
+++ b/design.css
@@ -25,7 +25,6 @@ button{
 	margin: 10px;
 	
 }
-
 .flex-container-buttons{
 	display:flex;
 	justify-content:center;
@@ -39,7 +38,6 @@ display: flex;
 	justify-content:center;
 	margin-top: 40px;
 }
-
 .message-container{
 	display: flex;
 	justify-content: center;
@@ -105,7 +103,6 @@ display: flex;
   }
 
 @media only screen and (max-width: 768px) {
-	/* For mobile phones: */
 	.flex-container-buttons{
 		display:flex;
 		justify-content:center;
@@ -113,16 +110,15 @@ display: flex;
 		width:50%;
 	}
 	.flex-container-center{
-		display: flex;              /* establish flex container */
-		flex-direction: column;     /* stack flex items vertically */
-		justify-content: center;    /* center items vertically, in this case */
-		align-items: center;        /* center items horizontally, in this case */
+		display: flex;              
+		flex-direction: column;     
+		justify-content: center;    
+		align-items: center;        
 		flex-wrap: wrap;
 	}
 	.flex-container{
 		display:flex;
 	}
-	
 	#result{
 		margin:10px;
 	}
